--- a/Spacy.ipynb
+++ b/Spacy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPrAiacFNDO30qQXbEqz+9S",
+      "authorship_tag": "ABX9TyPAShU+eP6n3YMYbXWUbP4K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# What's spaCy?\n",
+        "# What's $\\color{red}{\\text{spaCy}}$?\n",
         "\n",
         "SpaCy is **free**, **open-source library** for advanced **Natural language processing**(NLP) in Python.\n",
         "\n",
@@ -73,7 +73,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Tokenization\n",
+        "## $\\color{red}{\\text{Tokenization}}$\n",
         "\n",
         "During processing, spaCy first tokenizes the text, i.e. segments it into words, punctuation and so on. This is done by applying rules specific to each language. For example, punctuation at the end of a sentence should be split off – whereas “U.K.” should remain one token.  Each *Doc* consists of individual tokens, and we can iterate over them:"
       ],
@@ -135,7 +135,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Named Entities \n",
+        "##$\\color{red}{\\text{Named Entities }}$ \n",
         "\n",
         "A named entity is a “real-world object” that’s assigned a name – for example, a person, a country, a product or a book title. spaCy can recognize various types of named entities in a document, by asking the model for a prediction. Because models are statistical and strongly depend on the examples they were trained on, this doesn’t always work perfectly and might need some tuning later, depending on your use case.\n",
         "\n",
@@ -163,6 +163,9 @@
     {
       "cell_type": "markdown",
       "source": [
+        "$\\color{red}{\\text{en_core_web_sm}}$\n",
+        "\n",
+        "\n",
         "LANGUAGE ------> **en** English\n",
         "\n",
         "TYPE   ------> **core**  Vocabulary, syntax, entities\n",
@@ -178,7 +181,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Visualizing the Named Entity recognizer\n",
+        "## Visualizing the $\\color{red}{\\text{Named Entity recognizer}}$\n",
         "\n",
         "The entity visualizer, *ent* , highlight named entities and their label in the text."
       ],
@@ -369,7 +372,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Knowledge base\n",
+        "##$\\color{red}{\\text{Knowledge base}}$ \n",
         "\n",
         "To support the entity linking task, spaCy stores external knowledge in a KnowledgeBase. The knowledge base (KB) uses the Vocab to store its data efficiently.\n",
         "\n",
@@ -437,96 +440,6 @@
       "source": [],
       "metadata": {
         "id": "COShyAMa7iNd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0oaLLJNW7iRt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "d5WfmF2k7iVq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "XkhBMKLP7iYX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "88MgvzGJ7iax"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "DZTLnJAm7ieJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "jnV6GF987ihG"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "JKaahLvK7ikK"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "E-V-TCRO7inR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "WqboBu9z7iq1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "91_2MPeB7itu"
       },
       "execution_count": null,
       "outputs": []
